# Paladin

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .markdownlint.json  .pre-commit-config.yaml  404.html  Paladin.sln  Paladin.slnx  README.md  build.ps1  clean.ps1  clean.py  clean.sh  docker-compose.yml  environment.yml  hatch_build.py  index.html  meson.build  meta.yaml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: deploy.yml  mirror-to-codeberg.yml  package.yml
Ahri/Paladin/: Paladin.pyproj  __init__.py  check.py  run_test.py
Ahri/Paladin/config/: __init__.py  config.py
Ahri/Paladin/core/: ahri_enum.py
Conda/: index.html
Docker/: index.html
Paladin/: Paladin.py  Paladin.pyproj  README.md  __init__.py  __main__.py  check.py  ctypes_utils.py  run_test.py
Paladin/config/: __init__.py
Paladin/utils/: __init__.py  check.py  contants.py  decorator.py  download.py  error.py  logger.py  logger.yaml  logger_utils.py  loguru_utils.py  mqtt_utils.py
Paladin/web/: main.py  test_app.http
Paladin/www/: __init__.py  websocket_server.py
config/: .condarc  pip.ini
django_learn/: Dockerfile  README.md  __init__.py  docker-compose.yml  nginx.conf  requirements.txt  run.ps1
django_learn/app/: urls.py  views.py
django_learn/config/: settings.py  urls.py
django_learn/django_learn/: settings.py  urls.py
django_learn/genshin/: models.py
django_learn/middleware/: __init__.py  exception.py
django_learn/starsky/: admin.py  apps.py  enums.py  models.py  serializers.py  urls.py  views.py
django_learn/swallowedstar/: admin.py  api.py  apps.py  enums.py  models.py  schemas.py  urls.py  views.py
django_learn/templates/: base.html  index.html
django_learn/utils/: __init__.py  django_utils.py  drf_utils.py  error.py  ninja_utils.py
docker/: Dockerfile.django_learn  Dockerfile.fastapi_learn  Dockerfile.flask_learn
docs/: Conda.md  Docker.md  Python.md  index.md  nginx.md  pip.md
fastapi_learn/: .gitignore  Dockerfile  README.md  __init__.py  alembic.ini  docker-compose.yml  main.py  nginx.conf  requirements.txt  run.ps1
fastapi_learn/alembic/: env.py
fastapi_learn/api/: __init__.py  apikey.py  genshin.py  genshin_role.py  genshin_user.py  item.py  user.py
fastapi_learn/config/: __init__.py  admin_manager.py  config.py  database.py  debugger.py  redis_config.py  redis_manager.py  websocket_manager.py
fastapi_learn/crud/: __init__.py  apikey.py  base.py  genshin_role.py  user.py
fastapi_learn/enums/: __init__.py  genshin.py  genshin_role.py  user.py
fastapi_learn/models/: __init__.py  admin.py  apikey.py  base.py  genshin.py  genshin_role.py  item.py  user.py
fastapi_learn/schema/: __init__.py  item.py
fastapi_learn/schemas/: __init__.py  apikey.py  base.py  genshin.py  genshin_role.py  user.py
fastapi_learn/scripts/: init_db.py  init_genshin_role_table.py
fastapi_learn/services/: apikey.py
fastapi_learn/sql/: paladin_fastapi_learn.sql
fastapi_learn/templates/: base.html  form.html  websocket.html
fastapi_learn/tests/: test_user.py
fastapi_learn/utils/: __init__.py  error.py  exception_handler.py  password.py
flask_learn/: Dockerfile  README.md  __init__.py  constants.py  docker-compose.yml  main.py  nginx.conf  requirements.txt  run.ps1  run.sh
flask_learn/api/: __init__.py  login.py  music.py  user.py
flask_learn/config/: __init__.py  admin_manager.py  config.py  database.py  debugger.py  login_manager.py
flask_learn/crud/: __init__.py  base.py  music.py  user.py
flask_learn/enums/: __init__.py  music.py
flask_learn/models/: __init__.py  base.py  music.py  user.py
flask_learn/schemas/: __init__.py  base.py  login.py  music.py  user.py
flask_learn/services/: __init__.py  user.py
flask_learn/templates/: base.html  dashboard.html  login.html
flask_learn/utils/: __init__.py  api_response.py  error.py  error_handler.py  json_provider.py
geography_meteorology_learn/: environment.yml  requirements.txt
geography_meteorology_learn/scripts/: .gitignore  download_ERA5.py  download_GFS.py  read_grib.py  read_netcdf.py  read_prepbufr.py
gradio_learn/: README.md  app.py
learning/: ahri.j2  jinjia2_learning.py  matplotlib_learning.py
learning/aiohttp_learning/: README.md  __init__.py  main.py  requirements.txt
learning/aiortc_learning/: index.html  webcam.py
learning/litestar_learning/: README.md  requirements.txt
learning/robyn_learning/: main.py
nginx/: index.html  nginx.conf
nginx/conf.d/: django_learn.conf  fastapi_learn.conf  flask_learn.conf
pip/: index.html
python/: abstract.py  assignment_expressions.py  base.py  cartopy_.ipynb  compress.py  context_manager.py  data_structure.py  decorator_.py  decorator_closure.py  descriptor.py  disassembly.py  exception.py  fstrings.py  generic.py  interrupt.py  lambda.py  logger.py  match.py  mathematics.py  matplotlib_.ipynb  numpy_.ipynb  operating_system.py  pandas_.ipynb  python.pyproj  python_ellipsis.py  python_type.py  pytorch_.ipynb  regular_expressions.py  scipy_.ipynb  seaborn_.ipynb  singleton.py  typing_hint.py  utils.py  weak_reference.py  xarray_.ipynb
python/classes/: class.py
python/concurrency/: async.py  process.py  processpool.py  thread.py  threadpool.py
python/coroutine/: asgiref_learn.py  async.py  async_iterable.py  yield_from.py
python/extensions/: README.md
python/file/: csv_file.py  json_file.py  toml_file.py  xml_file.py  yaml_file.py
python/net/: client.py
python/notebook/: matplotlib_.ipynb  numpy_.ipynb  pandas_.ipynb  scipy_.ipynb  tensorflow_.ipynb  xarray_.ipynb
python/socket_operations/: server.py
python_learning/: matplotlib_learn.py
python_learning/aiortc_learn/: README.md  webcam.py
python_learning/flask_learn/: main.py
python_learning/litestar_learn/: main.py
robyn_learn/: main.py
search/: search_index.json
streamlit_learn/: README.md  app.py  utils.py
streamlit_learn/.streamlit/: config.toml
stylesheets/: extra.css
sumo_learn/: .gitignore  README.md
tests/: test_Ahri.py  test_Sokyoei.py  test_logger.py  test_loguru.py  test_mqtt_subscribe.py
(+98 files in other folders)
