# This file is Sokyoei's personal configuration for Python project.

[build-system]
# requires = ["setuptools", "wheel"]
# build-backend = "setuptools.build_meta"
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Ahri.Paladin"
version = "0.0.1"
authors = [{ name = "Sokyoei" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    # data analysis
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "PyYAML",
    "loguru",
    "asgiref",
    "pydantic-settings",
]
requires-python = ">= 3.12"

[project.urls]
Repository = "https://github.com/Sokyoei/Paladin"

[project.optional-dependencies]
# Sokyoei know and learn library
utils = ["python-dateutil", "packaging"]
# geography = [
#     "wrf-python", # https://github.com/NCAR/wrf-python
#     "eccodes",    # https://github.com/ecmwf/eccodes-python
#     "ecmwflibs",  # https://github.com/ecmwf/ecmwflibs support to python3.11
#     "f90nml",     # https://github.com/marshallward/f90nml
#     "cdsapi",     # https://github.com/ecmwf/cdsapi
#     "netCDF4",    # https://github.com/Unidata/netcdf4-python
#     "xarray",     # https://github.com/pydata/xarray
#     "cfgrib",     # https://github.com/ecmwf/cfgrib
#     "Cartopy",    # https://github.com/SciTools/cartopy
#     "geopandas",  # https://github.com/geopandas/geopandas
#     "pyshp",      # https://github.com/GeospatialPython/pyshp
#     "pyproj",     # https://github.com/pyproj4/pyproj
# ]
sumo = [
    # https://github.com/eclipse-sumo/sumo
    "eclipse-sumo",
    "libsumo",
    "libtraci",
    "sumolib",
    "traci",
]
webapp = ["streamlit", "gradio"]
gui = ["PyQt5"]
cli = ["click"]
fastapi_learn = [
    "fastapi[all]",
    "sqlalchemy[aiomysql]",
    "redis",
    "fastapi-users[sqlalchemy, oauth]",
    "sqladmin[full]",
    "fastapi-cache2",
    "fastapi-utils[all]",
    "fastapi-pagination",
    "prometheus-fastapi-instrumentator",
]
flask_learn = [
    "Flask[async]",
    "Flask-SQLAlchemy",
    "Flask-Migrate",
    "Flask-Admin[sqlalchemy,images,export,translation]",
    "Flask-Login",
    "Flask-WTF",
    "Flask-DebugToolbar",
    "Flask-Limiter",
    "Flask-Caching",
]
django_learn = [
    "django",
    "django-ninja",
    "djangorestframework",
    "docutils",
    "django-ninja-extra",
    "django-filter",
    "django-debug-toolbar",
    "django-extensions",
]

[project.scripts]

[project.gui-scripts]

[dependency-groups]
build = ["build", "hatch"]
dev = ["isort", "ruff", "black", "pipdeptree", "viztracer"]
test = ["pytest", "pytest-asyncio", "tox", "coverage"]

[tool.setuptools]
include-package-data = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
ignore-vcs = true
packages = ["./data", "./docs", "./python", "./tests"]
include = []
exclude = ["/.vscode"]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["./data", "./docs", "./python", "./tests"]
include = []
exclude = []

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.uv]
default-groups = ["dev", "test"]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.isort]
line_length = 120
multi_line_output = 0

[tool.black]
line-length = 120
preview = true
skip-string-normalization = true
skip-magic-trailing-comma = true

[tool.autopep8]
max_line_length = 120

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "UP",  # pyupgrade
    "F",   # pyflakes
    "E",   # pycodestyle error
    "W",   # pycodestyle warning
    "C90", # mccabe
    "I",   # isort
    # "N",   # pep8-naming
    # "D",   # pydocstyle
    "PD",   # pandas-vet
    "NPY",  # numpy specific rules
    "RUF",  # ruff specific rules
    "FAST", # FastAPI
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # https://docs.astral.sh/ruff/rules/line-too-long/
    "RUF001", # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-string/
    "RUF002", # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-docstring/
    "RUF003", # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-comment/
    # "F841",   # unused-variable
]
ignore-init-module-imports = true
pydocstyle = { convention = "google" }

[tool.ruff.lint.isort]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
